--- a/terminal/.out/index.html
+++ b/terminal/.out/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Terminal</title>
 		
-	<link rel="stylesheet" crossorigin href="./index-11dz7y9j.css"><script type="module" crossorigin src="./index-se2yf6h1.js"></script></head>
+	<link rel="stylesheet" crossorigin href="./index-11dz7y9j.css"><script type="module" crossorigin src="./index-ty8vefjz.js"></script></head>
 	<body>
 		<div id="terminal" class="">
 			<textarea
